--- a/config/options.ini
+++ b/config/options.ini
@@ -21,13 +21,13 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = bot_token
+Token = NDYxNTgwNjM3MDM2NDc4NDY0.DhaMrA.qrqeCBQS9fzmNDUYCZCX_fiFjZw
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
 # details, following these instructions: https://just-some-bots.github.io/MusicBot/#how-do-i-enable-spotify-integration
-Spotify_ClientID =
-Spotify_ClientSecret =
+Spotify_ClientID = 6e90b7578b504260b0826f1913d071a7
+Spotify_ClientSecret = 55f89c9d184449739482b926dab2f66f
 
 [Permissions]
 # This option determines which user has full permissions and control of the bot.
@@ -36,7 +36,7 @@ Spotify_ClientSecret =
 # Setting this option to 'auto' will set the owner of the bot to the person who
 # created the bot application, which is usually what you want. Else, change it
 # to another user's ID.
-OwnerID = auto
+OwnerID = 339301474116829204
 
 # This option determines which users have access to developer-only commands.
 # Developer only commands are very dangerous and may break your bot if used
